update results before new function

--- a/report/report.tex
+++ b/report/report.tex
@@ -82,14 +82,11 @@ ece 759 project part 2
 
 \section{Code Listings}
 
-Below are some of the primary scripts that execute the project. Please see the
-\code{code} folder for supporting functions and scripts.
+Below are the demonstration scripts that execute the algorithms we implemented and print their results. Please see the
+\code{code} folder for supporting functions and scripts, including cross validation and data processing.
 
-\lstinputlisting[caption=Demonstration Code for Decision Tree on MNIST]{../code/demonstration_dt_MNIST.m}
-\lstinputlisting[caption=Demonstration Code for Extra-Trees on Yale B]{../code/demonstration_et_YaleB.m}
-\lstinputlisting[caption=Cross Validation Code for Decision Tree on MNIST]{../code/decisionTree/crossValidation/MNIST_cv.m}
-%\lstinputlisting[caption=Cross Validation Code for Extra-Trees on Yale B]{../code/extraTree/crossValidation/YaleB_cv.m}
-\lstinputlisting[caption=Main Code for LDA on MNIST]{../code/lda/ldacode.m}
-%\lstinputlisting[caption=Main Code for LDA on Yale B]{../code/lda/lda_YaleB.m}
+\lstinputlisting[caption=Demonstration Code for Decision Tree on MNIST.]{../code/demonstration_dt_MNIST.m}
+\lstinputlisting[caption=Demonstration Code for Extra-Trees on Yale B.]{../code/demonstration_et_YaleB.m}
+\lstinputlisting[caption=Demonstration Code for LDA on MNIST.]{../code/demonstration_lda_mnist.m}
 
 \end{document}
