report looking good

--- a/report/report.tex
+++ b/report/report.tex
@@ -88,5 +88,6 @@ Below are the demonstration scripts that execute the algorithms we implemented a
 \lstinputlisting[caption=Demonstration Code for Decision Tree on MNIST.]{../code/demonstration_dt_MNIST.m}
 \lstinputlisting[caption=Demonstration Code for Extra-Trees on Yale B.]{../code/demonstration_et_YaleB.m}
 \lstinputlisting[caption=Demonstration Code for LDA on MNIST.]{../code/demonstration_lda_mnist.m}
+\lstinputlisting[caption=Demonstration Code for LDA on Yale B.]{../code/demonstration_lda_YaleB.m}
 
 \end{document}
