--- a/bibliography.bib
+++ b/bibliography.bib
@@ -56,23 +56,6 @@
   note = "[Online; accessed 2018-03-14]"
 }
 
-@article{lecun-mnisthandwrittendigit-2010,
-  added-at = {2010-06-28T21:16:30.000+0200},
-  author = {LeCun, Yann and Cortes, Corinna},
-  biburl = {https://www.bibsonomy.org/bibtex/2935bad99fa1f65e03c25b315aa3c1032/mhwombat},
-  groups = {public},
-  howpublished = {http://yann.lecun.com/exdb/mnist/},
-  interhash = {21b9d0558bd66279df9452562df6e6f3},
-  intrahash = {935bad99fa1f65e03c25b315aa3c1032},
-  keywords = {MSc _checked character_recognition mnist network neural},
-  lastchecked = {2016-01-14 14:24:11},
-  timestamp = {2016-07-12T19:25:30.000+0200},
-  title = {{MNIST} handwritten digit database},
-  url = {http://yann.lecun.com/exdb/mnist/},
-  username = {mhwombat},
-  year = 2010
-}
-
 @Article{Li2006,
 author="Li, Tao
 and Zhu, Shenghuo
@@ -90,6 +73,7 @@ issn="0219-3116",
 doi="10.1007/s10115-006-0013-y",
 url="https://doi.org/10.1007/s10115-006-0013-y"
 }
+
 @misc{ book:advlda,
 	author = "Petra Nass",
 	title = "Discriminant Analysis",
@@ -97,10 +81,36 @@ url="https://doi.org/10.1007/s10115-006-0013-y"
 	url = "http://www.eso.org/sci/software/esomidas//doc/user/98NOV/volb/node214.html",
 	note = "[Online; accessed 2018-04-20]"
 }
+
 @misc{ notes:dislda,
 	author = "Ricardo Gutierrez-Osuna",
 	title = "LInear Discriminant Analysis",
 	year = "2018",
 	url = "http://research.cs.tamu.edu/prism/lectures/pr/pr_l10.pdf",
 	note = "[Online; accessed 2018-04-20]"
+}
+
+% MNIST
+@article{lecun-mnisthandwrittendigit-2010,
+  added-at = {2010-06-28T21:16:30.000+0200},
+  author = {LeCun, Yann and Cortes, Corinna},
+  biburl = {https://www.bibsonomy.org/bibtex/2935bad99fa1f65e03c25b315aa3c1032/mhwombat},
+  groups = {public},
+  howpublished = {http://yann.lecun.com/exdb/mnist/},
+  interhash = {21b9d0558bd66279df9452562df6e6f3},
+  intrahash = {935bad99fa1f65e03c25b315aa3c1032},
+  keywords = {MSc _checked character_recognition mnist network neural},
+  lastchecked = {2016-01-14 14:24:11},
+  timestamp = {2016-07-12T19:25:30.000+0200},
+  title = {{MNIST} handwritten digit database},
+  url = {http://yann.lecun.com/exdb/mnist/},
+  username = {mhwombat},
+  year = 2010
+}
+
+% Yale B
+@article {yaleB,
+	title = {Yale Face Database B},
+	abstract = {<p>The database contains 5760 single light source images of 10 subjects each seen under\&nbsp;576 viewing conditions\&nbsp;(9 poses x 64 illumination conditions).\&nbsp; For every subject in a particular pose, an image with ambient (background) illumination was also captured. Hence, the total number of images is in fact 5760+90=5850. The total size of the compressed database is about 1GB.</p>},
+	url = {http://vision.ucsd.edu/~leekc/ExtYaleDatabase/Yale\%20Face\%20Database.htm}
 }
