--- a/presentation/sections/introduction.tex
+++ b/presentation/sections/introduction.tex
@@ -3,41 +3,34 @@
 	
 	\begin{itemize}
 %		\itemsep 0em
-		\item labels for supervised machine learning
-		\item identify patterns in data
-		\item variety of clustering algorithms to choose from
-		\item applications: gene sequencing, medical imaging, social networks, etc.
+		\item 
+		\item applications: 
 	\end{itemize}
 
 \end{frame}
 
 \begin{frame}
-\frametitle{dataset}
+\frametitle{datasets}
 	
+Modified National Institute of Standards and Technology (MNIST) database
 	\begin{itemize}
 		\setlength{\itemindent}{4em}
-		\item source: UCI machine learning repository
-		\item provided: Dr. Manohar Kaul of Aarhus University
-		\item longitude \& latitude (degrees), altitude (meters)
-		\item $\sim$430k locations in North Jutland, Denmark \cite{dataset}
-		\item used first \N points-- covers $\sim$4,500 sq. mi.
+		\item source: Yann LeCun et al. \cite{lecun-mnisthandwrittendigit-2010}
+		\item 
 	\end{itemize}
-	
-	{
-	     \centering
-	     \includegraphics[height=\dimexpr0.6\textheight-0.4in]{denmark}
-		\vfill
-	}
 
-\end{frame}
+        Yale Exended Face Database B
+	\begin{itemize}
+		\setlength{\itemindent}{4em}
+		\item source: Yale University \cite{yaleB}
+		\item 
+	\end{itemize}
 
-\begin{frame} % t aligns to the top, b to bottom
-\frametitle{dataset}
-
-	{
-	     \centering
-	     \includegraphics[height=\dimexpr\textheight-0.4in]{surface_samples}
-		\vfill
-	}
+	% todo picture of numbers and faces
+	%{
+	%     \centering
+	     %\includegraphics[height=\dimexpr0.6\textheight-0.4in]{denmark}
+	%	\vfill
+	%}
 
 \end{frame}
