--- a/presentation/sections/introduction.tex
+++ b/presentation/sections/introduction.tex
@@ -12,25 +12,30 @@
 \begin{frame}
 \frametitle{datasets}
 	
-Modified National Institute of Standards and Technology (MNIST) database
+Modified Nat'l Institute of Standards and Technology (MNIST) database
 	\begin{itemize}
 		\setlength{\itemindent}{4em}
 		\item source: Yann LeCun et al. \cite{lecun-mnisthandwrittendigit-2010}
 		\item 
 	\end{itemize}
 
-        Yale Exended Face Database B
+	{
+          \begin{center}
+	  \includegraphics[height=\dimexpr0.1\textheight]{mnistExample}
+          \end{center}
+	}
+
+Yale Exended Face Database B
 	\begin{itemize}
 		\setlength{\itemindent}{4em}
 		\item source: Yale University \cite{yaleB}
 		\item 
 	\end{itemize}
 
-	% todo picture of numbers and faces
-	%{
-	%     \centering
-	     %\includegraphics[height=\dimexpr0.6\textheight-0.4in]{denmark}
-	%	\vfill
-	%}
+	{
+          \begin{center}
+	  \includegraphics[height=\dimexpr0.24\textheight-0.4in]{yalebExample}
+          \end{center}
+	}
 
 \end{frame}
