--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -127,13 +127,13 @@ project slides
 
 	\showProgress
 
-%	\subfile{sections/em}
+%	\subfile{sections/et}
 		
 \section{linear discriminant analysis (LDA)}
 
 	\showProgress
 	
-%	\subfile{sections/kmeans}
+%	\subfile{sections/lda}
 
 \section{results}
 
