--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -127,7 +127,7 @@ project slides
 
 	\showProgress
 
-%	\subfile{sections/et}
+	\subfile{sections/et}
 		
 \section{linear discriminant analysis (LDA)}
 
@@ -136,6 +136,10 @@ project slides
 %	\subfile{sections/lda}
 
 \section{results}
+
+	\showProgress
+	
+	\subfile{sections/results}
 
 \section{conclusion}
 
