--- a/presentation/sections/conclusion.tex
+++ b/presentation/sections/conclusion.tex
@@ -2,20 +2,20 @@
 \frametitle{conclusion}
 
 	\begin{itemize}
-		\setlength{\itemindent}{3em}
-		\item intuition and heuristics needed for each algorithm
-		\item choice of algorithm depends on features of interest
+		\setlength{\itemindent}{2em}
+		\item intuition needed for feature generation
+		\item choice of algorithm depends on type of data, time available
 		\item future work:
 		\begin{itemize}
 			\setlength{\itemindent}{3em}
-			\item alternative distance metrics
-			\item normalize input data
+			\item alternative features
 			\item parallelize algorithms
 		\end{itemize}
 	\end{itemize}
 
 \end{frame}
 
+% references bibliography
 \begin{frame}%[shrink=20]
 
 	\frametitle{references}
@@ -24,6 +24,7 @@
 
 \end{frame}
 
+% thanks slide
 \begingroup
 \setbeamercolor{background canvas}{bg=gray!10}
 \begin{frame}[plain]
