--- a/presentation/sections/et.tex
+++ b/presentation/sections/et.tex
@@ -1,7 +1,7 @@
 \begin{frame}
-  \frametitle{extra trees}
+  \frametitle{extremely randomized (extra) trees}
 
-  recursive random tree
+  recursive, random tree
   \begin{enumerate}
   \item check stopping conditions
     % 
