--- a/presentation/sections/introduction.tex
+++ b/presentation/sections/introduction.tex
@@ -3,8 +3,8 @@
 	
 	\begin{itemize}
 %		\itemsep 0em
-		\item 
-		\item applications: 
+		\item classifiers are a foundation of data science
+		\item applications: general classification, subspace analysis
 	\end{itemize}
 
 \end{frame}
@@ -16,7 +16,7 @@ Modified Nat'l Institute of Standards and Technology (MNIST) database
 	\begin{itemize}
 		\setlength{\itemindent}{4em}
 		\item source: Yann LeCun et al. \cite{lecun-mnisthandwrittendigit-2010}
-		\item 
+		\item 70k 28x28 images of handwritten digits (0-9)
 	\end{itemize}
 
 	{
@@ -29,7 +29,7 @@ Yale Exended Face Database B
 	\begin{itemize}
 		\setlength{\itemindent}{4em}
 		\item source: Yale University \cite{yaleB}
-		\item 
+		\item 2414 32x32 images of 38 subjects
 	\end{itemize}
 
 	{
