--- a/presentation/sections/results.tex
+++ b/presentation/sections/results.tex
@@ -4,32 +4,28 @@
 best performance
   \begin{table}[H]
   \centering
-  \begin{tabular}{||c | c | c||} 
-    \hline
+  \begin{tabular}{c | c | c} 
     algorithm & MNIST & Yale B \\
-    \hline\hline
+    \hline
     LDA & 13.5\%  & 6.8\% \\ 
     \hline
     decision tree & 16.6\% & 57.9\% \\ 
     \hline
     extra-trees & 4.9\% & 34\% \\
-    \hline
   \end{tabular}
 \end{table}
 5-fold cross-validated performance
 %
 \begin{table}[H]
   \centering
-  \begin{tabular}{||c | c | c||} 
-    \hline
+  \begin{tabular}{c | c | c} 
     algorithm & MNIST & Yale B \\
-    \hline\hline
+    \hline
     LDA & 14.5\%  & 2.5\% \\ 
     \hline
     decision Tree & 17.9\% & 74.9\% \\ 
     \hline
     extra-trees & 5.4\% & 36.3\% \\
-    \hline
   \end{tabular}
 \end{table}
 
