--- a/presentation/sections/conclusion.tex
+++ b/presentation/sections/conclusion.tex
@@ -1,13 +1,19 @@
-\begin{frame}
+\begin{frame}[c]
 \frametitle{conclusion}
 
 	\begin{itemize}
-		\setlength{\itemindent}{2em}
+		\setlength{\itemindent}{5em}
 		\item intuition needed for feature generation
-		\item choice of algorithm depends on type of data, time available
-		\item future work:
+		\item choice of algorithm depends on
+                  \begin{itemize}
+                     \setlength{\itemindent}{6em}
+                    \item type of data
+                    \item time available
+                    \item accuracy needed
+                  \end{itemize}
+		\item future work
 		\begin{itemize}
-			\setlength{\itemindent}{3em}
+			\setlength{\itemindent}{6em}
 			\item alternative features
 			\item parallelize algorithms
 		\end{itemize}
