--- a/bibliography.bib
+++ b/bibliography.bib
@@ -15,19 +15,19 @@
     note = "[Online; accessed 14-March-2018]"
   }
 
+@misc{ wiki:et,
+    author = "{Wikipedia contributors}",
+    title = "Random forest --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2018",
+    url = "https://en.wikipedia.org/w/index.php?title=Random_forest&oldid=835384441",
+    note = "[Online; accessed 23-April-2018]"
+  }
+
 @misc{ wiki:IG,
     author = "Wikipedia contributors",
     title = "Information gain in decision trees --- Wikipedia{,} The Free Encyclopedia",
     year = "2017",
     url = "https://en.wikipedia.org/w/index.php?title=Information_gain_in_decision_trees&oldid=796489314",
-    note = "[Online; accessed 15-March-2018]"
-  }
-
-@misc{ wiki:LDA,
-    author = "Wikipedia contributors",
-    title = "Linear discriminant analysis --- Wikipedia{,} The Free Encyclopedia",
-    year = "2017",
-    url = "https://en.wikipedia.org/wiki/Linear_discriminant_analysis",
     note = "[Online; accessed 15-March-2018]"
   }
 
@@ -48,6 +48,14 @@
 }
 
 % lda
+@misc{ wiki:LDA,
+    author = "Wikipedia contributors",
+    title = "Linear discriminant analysis --- Wikipedia{,} The Free Encyclopedia",
+    year = "2017",
+    url = "https://en.wikipedia.org/wiki/Linear_discriminant_analysis",
+    note = "[Online; accessed 15-March-2018]"
+  }
+  
 @misc{ images:ldapca,
   author = "Sebastian Raschka",
   title = "What is the difference between LDA and PCA for dimensionality reduction?",
