--- a/presentation/sections/dt.tex
+++ b/presentation/sections/dt.tex
@@ -4,6 +4,7 @@
   	{
           \begin{center}
 	  \includegraphics[height=\dimexpr0.8\textheight-0.4in]{decision_tree}
+          \\\emph{features generated with LDA}
           \end{center}
 	}
 
@@ -12,7 +13,7 @@
 \begin{frame}
   \frametitle{training decision trees}
   
-  recursive training algorithm:
+  recursive training algorithm \cite{wiki:c45} :
   %
   \begin{enumerate}
   \item check stopping conditions
