--- a/presentation/sections/introduction.tex
+++ b/presentation/sections/introduction.tex
@@ -1,3 +1,4 @@
+\iffalse
 \begin{frame}
 \frametitle{motivation}
 	
@@ -8,6 +9,7 @@
 	\end{itemize}
 
 \end{frame}
+\fi
 
 \begin{frame}
 \frametitle{datasets}
