a minor change to lda.tex

--- a/presentation/sections/lda.tex
+++ b/presentation/sections/lda.tex
@@ -41,7 +41,7 @@ Steps:
 		\end{equation} 
 		\item we classify it to the class with max($f_i(x_k)$)
 	\end{itemize}
-
+\end{frame}
 %  recursive training algorithm \cite{wiki:c45} :
 %  
 %  \begin{enumerate}
