--- a/presentation/sections/lda.tex
+++ b/presentation/sections/lda.tex
@@ -24,6 +24,16 @@ Steps:
 \end{frame}
 
 \begin{frame}
+\frametitle{PCA vs LDA}
+\begin{center}
+	\centering
+	\subfloat{{\includegraphics[width=0.4\columnwidth]{pca} }}
+	\subfloat{{\includegraphics[width=0.4\columnwidth]{lda} }}
+	\caption{\\PCA and LDA implemented on 2-dimensional data}
+\end{center}
+\end{frame}
+
+\begin{frame}
   \frametitle{LDA - classification}
   
   Assumptions:
